[gd_scene load_steps=40 format=3 uid="uid://dnpkiscvflhl7"]

[ext_resource type="Texture2D" uid="uid://dvpue7mdnoat8" path="res://sprites/characters/Blue_Head_Walking-Sheet.png" id="1_onrkg"]
[ext_resource type="Script" uid="uid://brtt07hne3a6e" path="res://scripts/player.gd" id="1_qhqgy"]
[ext_resource type="Texture2D" uid="uid://cwqock2cew2fn" path="res://sprites/characters/Blue_Head_Idle-Sheet.png" id="2_i3pqv"]
[ext_resource type="AudioStream" uid="uid://cm7hkpdwqkab1" path="res://byistraya-hodba-po-graviyu-26129.mp3" id="4_dqkch"]
[ext_resource type="Script" uid="uid://bwpffcsm1vav4" path="res://scenes/camera_2d.gd" id="4_qlg0r"]
[ext_resource type="FontFile" uid="uid://b1lxk5nesfae8" path="res://fonts/Milk(RUS BY LYAJKA) Regular.ttf" id="5_tuyoq"]
[ext_resource type="AudioStream" uid="uid://b71723xckxq5u" path="res://fa4811c6c7e5a78.mp3" id="7_fjrip"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("1_onrkg")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("1_onrkg")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("1_onrkg")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("1_onrkg")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("2_i3pqv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("2_i3pqv")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("2_i3pqv")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("2_i3pqv")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("2_i3pqv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("2_i3pqv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("2_i3pqv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("2_i3pqv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("2_i3pqv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("1_onrkg")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("1_onrkg")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("1_onrkg")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("1_onrkg")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("1_onrkg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("1_onrkg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("1_onrkg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("1_onrkg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_iruf7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}],
"loop": true,
"name": &"side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5n4i"]
size = Vector2(62, 90)

[sub_resource type="CircleShape2D" id="CircleShape2D_634y6"]
radius = 62.0081

[sub_resource type="Animation" id="Animation_tuyoq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WelcomeLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "hide_text"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WelcomeLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "show_text"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WelcomeLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_smehm"]
_data = {
&"RESET": SubResource("Animation_tuyoq"),
&"hide_text": SubResource("Animation_fjrip"),
&"show_text": SubResource("Animation_qlg0r")
}

[node name="Player" type="CharacterBody2D"]
z_index = 2
script = ExtResource("1_qhqgy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_iruf7")
animation = &"up"
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, -2)
shape = SubResource("RectangleShape2D_j5n4i")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("4_qlg0r")

[node name="Player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_634y6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Tip" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = -134.0
offset_right = 96.5
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
text = "Нажмите"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WelcomeLabel" type="Label" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -266.5
offset_right = 145.5
offset_bottom = -173.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("5_tuyoq")
theme_override_font_sizes/font_size = 52
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/WelcomeLabel"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_smehm")
}

[node name="strength_player" type="Label" parent="CanvasLayer"]
offset_left = 23.0
offset_top = 19.0
offset_right = 283.0
offset_bottom = 132.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 28
text = "Сила: 0"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dqkch")

[node name="sound_damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_fjrip")
volume_db = -17.17

[connection signal="area_entered" from="Player" to="." method="_on_player_area_entered"]
[connection signal="area_exited" from="Player" to="." method="_on_player_area_exited"]
[connection signal="body_entered" from="Player" to="." method="_on_player_body_entered"]
[connection signal="body_exited" from="Player" to="." method="_on_player_body_exited"]
